--- a/bnbnav-plugin/src/main/resources/plugin.yml
+++ b/bnbnav-plugin/src/main/resources/plugin.yml
@@ -2,5 +2,5 @@ name: BnbNav
 version: 1.0
 main: com.vicr123.bnbnav.BnbnavPlugin
 commands:
-  addRoadNode:
+  addroadnode:
     description: Adds a node to the map
