Add landmark icons

--- a/build-bnbnav-frontend-WebAssembly-Debug/Makefile
+++ b/build-bnbnav-frontend-WebAssembly-Debug/Makefile
@@ -559,12 +559,17 @@ qrc_resources.cpp: ../bnbnav-frontend/resources.qrc \
 		../bnbnav-frontend/logo.svg \
 		../bnbnav-frontend/landmarks/walnut.svg \
 		../bnbnav-frontend/landmarks/airport.svg \
+		../bnbnav-frontend/landmarks/generic-blue.svg \
 		../bnbnav-frontend/landmarks/hospital.svg \
 		../bnbnav-frontend/landmarks/parking.svg \
 		../bnbnav-frontend/landmarks/tourist-attraction.svg \
+		../bnbnav-frontend/landmarks/invisible.svg \
+		../bnbnav-frontend/landmarks/generic-gray.svg \
 		../bnbnav-frontend/landmarks/aircs.svg \
+		../bnbnav-frontend/landmarks/generic-red.svg \
 		../bnbnav-frontend/landmarks/immigration-check.svg \
 		../bnbnav-frontend/landmarks/squid-transit.svg \
+		../bnbnav-frontend/landmarks/generic-green.svg \
 		../bnbnav-frontend/directions/turn-aroud.svg \
 		../bnbnav-frontend/directions/merge.svg \
 		../bnbnav-frontend/directions/turn-around.svg \
