--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -24,10 +24,12 @@ jobs:
     - name: Prepare for deployment
       run: |
         mkdir bnbnav-win
-        cp bnbnav.exe bnbnav-win
+        cp bnbnav-frontend.exe bnbnav-win
     - name: Deploy
       working-directory: ./bnbnav-win
-      run: windeployqt bnbnav.exe
+      run: windeployqt bnbnav-frontend.exe
+    - name: List OpenSSL files
+      run: dir "C:/Program Files/OpenSSL/lib"
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v2.2.3
       with:
