--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -13,6 +13,7 @@ jobs:
       run:
         working-directory: ./bnbnav-frontend
     steps:
+    - run: dir "C:/Program Files/OpenSSL"
     - uses: actions/checkout@v2
     - uses: ilammy/msvc-dev-cmd@v1
     - name: Install Qt
