--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -17,7 +17,9 @@ jobs:
     - name: Install Qt
       run: brew install qt@5
     - name: Run qmake
-      run: qmake bnbnav-frontend.pro
+      run: |
+        qmake bnbnav-frontend.pro
+        echo "/usr/local/opt/qt@5/bin" >> $GITHUB_PATH
     - name: Build
       run: make
     - name: Prepare for deployment
