--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -29,4 +29,4 @@ jobs:
       with:
         # Artifact name
         name: bnbnav-macos.dmg
-        path: bnbnav-frontend/bnbnav-macos.dmg
+        path: bnbnav-frontend/bnbnav.dmg
